# qt_simple_program

./: CMakeLists.txt
src/: main.cpp
