CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(example)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
QT4_WRAP_CPP(example_MOCS mainwindows.h)
QT4_WRAP_UI(example_UIS mainwindows.ui)
ADD_EXECUTABLE(example main.cpp mainwindows.cpp ${example_MOCS})
TARGET_LINK_LIBRARIES(example ${QT_LIBRARIES})

#PROJECT(example)
#FIND_PACKAGE(Qt4 REQUIRED)
#SET(QT_DONT_USE_QTGUI TRUE)
#INCLUDE(${QT_USE_FILE})
#ADD_EXECUTABLE(example main.cpp)
#TARGET_LINK_LIBRARIES(example ${QT_LIBRARIES})
